Module 4, Exercise 3 and 4 Completed.